# crypto-exchange-data-collector

./: .dockerignore  .env.example  .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  config.toml  docker-compose.yml  prometheus.yml
grafana/provisioning/dashboards/: collector.json  system.json
src/: archive.rs  config.rs  db.rs  http.rs  main.rs  metrics.rs  models.rs  parquet.rs  s3.rs  upload.rs  utils.rs  websocket.rs
src/exchanges/: README.md  binance.rs  bybit.rs  coinbase.rs  mod.rs  okx.rs  upbit.rs
