[package]
name = "crypto-exchange-data-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
dotenv = "0.14.1"
futures-util = "0.3.31"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
polars = { version = "0.52.0", features = ["parquet"] }
rand = "0.9.2"
chrono = "0.4.43"