[package]
name = "crypto-exchange-data-collector"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-sdk-s3 = "1.120.0"
dotenv = "0.14.1"
futures-util = "0.3.31"
itertools = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
arrow = "54"
parquet = { version = "54", features = ["arrow", "snap", "zstd"] }
rand = "0.9.2"
chrono = "0.4.43"
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1.11", features = ["v4"] }
jsonwebtoken = "9"

# Observability
prometheus = "0.13"
lazy_static = "1.5"
axum = "0.8"

# TCP socket options
socket2 = "0.5"
url = "2"
native-tls = "0.2"
tokio-native-tls = "0.3"